# image_palette_generator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  color.cc  color.h  color_count.cc  color_count.h  image_palette_generator.c  image_palette_generator.cc  image_palette_generator.h  quantized_color_count.h
example/: main.cc  main.html
test/: dominant_color.cc  main.c  main.cc  main.html
